--- a/index.html
+++ b/index.html
@@ -627,8 +627,8 @@
             'ru': {
                 'title': '💡 Ставки от AI',
                 'gameType': 'Тип игры',
-                // ИСПРАВЛЕНО: Исправлена кавычка после svg
-                'uploadLabel': '<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="margin-right: 8px;"><path d="M21.44 11.05l-9.19 9.19a6 6 0 0 1-8.49-8.49l9.19-9.19a4 4 0 0 1 5.66 5.66l-9.2 9.19a2 2 0 0 1-2.83-2.83l8.49-8.48"></path></svg> Загрузите изображение события',
+                // ИСПОЛЬЗУЕМ ОБРАТНЫЕ КАВЫЧКИ (`) ЧТОБЫ ИЗБЕЖАТЬ ОШИБОК С WIDTH
+                'uploadLabel': `<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="margin-right: 8px;"><path d="M21.44 11.05l-9.19 9.19a6 6 0 0 1-8.49-8.49l9.19-9.19a4 4 0 0 1 5.66 5.66l-9.2 9.19a2 2 0 0 1-2.83-2.83l8.49-8.48"></path></svg> Загрузите изображение события`,
                 'uploadHint': 'Или просто вставьте скриншот (Ctrl + V)',
                 'analyzeButton': '🔍 Проанализировать ставку',
                 'analyzeButtonLoading': '⏳ Анализируем...',
@@ -701,7 +701,8 @@ ${MY_CUSTOM_PROMPT ? `Additional instruction: "${MY_CUSTOM_PROMPT}".` : ''}
             'en': {
                 'title': '💡 AI Bets',
                 'gameType': 'Game Type',
-                'uploadLabel': '<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="margin-right: 8px;"><path d="M21.44 11.05l-9.19 9.19a6 6 0 0 1-8.49-8.49l9.19-9.19a4 4 0 0 1 5.66 5.66l-9.2 9.19a2 2 0 0 1-2.83-2.83l8.49-8.48"></path></svg> Upload event image',
+                // ИСПОЛЬЗУЕМ ОБРАТНЫЕ КАВЫЧКИ (`)
+                'uploadLabel': `<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="margin-right: 8px;"><path d="M21.44 11.05l-9.19 9.19a6 6 0 0 1-8.49-8.49l9.19-9.19a4 4 0 0 1 5.66 5.66l-9.2 9.19a2 2 0 0 1-2.83-2.83l8.49-8.48"></path></svg> Upload event image`,
                 'uploadHint': 'Or just paste a screenshot (Ctrl + V)',
                 'analyzeButton': '🔍 Analyze bet',
                 'analyzeButtonLoading': '⏳ Analyzing...',
@@ -774,7 +775,8 @@ ${MY_CUSTOM_PROMPT ? `Additional instruction: "${MY_CUSTOM_PROMPT}".` : ''}
             'hi': {
                 'title': '💡 एआई बेट्स',
                 'gameType': 'खेल का प्रकार',
-                'uploadLabel': '<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="margin-right: 8px;"><path d="M21.44 11.05l-9.19 9.19a6 6 0 0 1-8.49-8.49l9.19-9.19a4 4 0 0 1 5.66 5.66l-9.2 9.19a2 2 0 0 1-2.83-2.83l8.49-8.48"></path></svg> ईवेंट की छवि अपलोड करें',
+                // ИСПОЛЬЗУЕМ ОБРАТНЫЕ КАВЫЧКИ (`)
+                'uploadLabel': `<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="margin-right: 8px;"><path d="M21.44 11.05l-9.19 9.19a6 6 0 0 1-8.49-8.49l9.19-9.19a4 4 0 0 1 5.66 5.66l-9.2 9.19a2 2 0 0 1-2.83-2.83l8.49-8.48"></path></svg> ईवेंट की छवि अपलोड करें`,
                 'uploadHint': 'या बस एक स्क्रीनशॉट पेस्ट करें (Ctrl + V)',
                 'analyzeButton': '🔍 बेट का विश्लेषण करें',
                 'analyzeButtonLoading': '⏳ विश्लेषण हो रहा है...',
